Reporting updates. Tracking config changes

--- a/DBAChecksConfigTool/App.config
+++ b/DBAChecksConfigTool/App.config
@@ -4,8 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="DBAChecksConfigTool.Properties.Settings.ConnectionString"
-            connectionString="Data Source=.;Initial Catalog=DBAChecksDB;Integrated Security=SSPI"
-            providerName="" />
+            connectionString="Data Source=.;Initial Catalog=DBAChecksDB;Integrated Security=SSPI" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
