--- a/DBAChecks/DBAChecks.csproj
+++ b/DBAChecks/DBAChecks.csproj
@@ -56,8 +56,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AWSTools.cs" />
     <Compile Include="DBCollector.cs" />
     <Compile Include="DBImporter.cs" />
+    <Compile Include="Encrypt.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
