--- a/DBAChecksService/DBAChecksService.csproj
+++ b/DBAChecksService/DBAChecksService.csproj
@@ -106,6 +106,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DBAChecksConfigTool\DBAChecksConfigTool.csproj">
+      <Project>{32225995-f2e7-4a4b-8734-57ce087f1220}</Project>
+      <Name>DBAChecksConfigTool</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DBAChecksServiceConfig\DBAChecksServiceConfig.csproj">
       <Project>{799e3ec5-e66d-4953-9182-38e7471770a0}</Project>
       <Name>DBAChecksServiceConfig</Name>
