--- a/DBAChecks/DBAChecks.csproj
+++ b/DBAChecks/DBAChecks.csproj
@@ -70,6 +70,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="XETools.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
