--- a/DBAChecksService/packages.config
+++ b/DBAChecksService/packages.config
@@ -1,18 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AWSSDK.Core" version="3.3.104.27" targetFramework="net472" />
-  <package id="AWSSDK.S3" version="3.3.110.25" targetFramework="net472" />
-  <package id="Common.Logging" version="3.1.0" targetFramework="net472" />
-  <package id="Common.Logging.Core" version="3.1.0" targetFramework="net472" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.0" targetFramework="net472" />
+  <package id="AWSSDK.Core" version="3.3.107.9" targetFramework="net472" />
+  <package id="AWSSDK.S3" version="3.3.111.10" targetFramework="net472" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net472" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net472" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net472" />
+  <package id="Microsoft.Data.SqlClient.SNI" version="1.1.1" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.6.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.6.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols" version="6.6.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.6.0" targetFramework="net472" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.6.0" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.Management.SqlParser" version="150.37051.0" targetFramework="net472" />
+  <package id="Microsoft.SqlServer.SqlManagementObjects" version="160.2004021.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
-  <package id="Quartz" version="2.3.2" targetFramework="net472" />
-  <package id="System.Buffers" version="4.5.0" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.3" targetFramework="net472" />
+  <package id="Quartz" version="2.6.2" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Data.Common" version="4.3.0" targetFramework="net472" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.6.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.0" targetFramework="net472" />
-  <package id="System.Text.Encodings.Web" version="4.7.0" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="4.7.1" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="Topshelf" version="4.2.1" targetFramework="net472" />
   <package id="Topshelf.Quartz" version="0.4.0.1" targetFramework="net472" />
