--- a/DBAChecks/packages.config
+++ b/DBAChecks/packages.config
@@ -1,6 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AWSSDK.Core" version="3.3.104.27" targetFramework="net461" />
-  <package id="AWSSDK.S3" version="3.3.110.25" targetFramework="net461" />
+  <package id="AWSSDK.Core" version="3.3.107.9" targetFramework="net471" />
+  <package id="AWSSDK.S3" version="3.3.111.10" targetFramework="net471" />
+  <package id="Microsoft.Data.SqlClient.SNI" version="1.1.1" targetFramework="net471" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.6.0" targetFramework="net471" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.6.0" targetFramework="net471" />
+  <package id="Microsoft.IdentityModel.Protocols" version="6.6.0" targetFramework="net471" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="6.6.0" targetFramework="net471" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.6.0" targetFramework="net471" />
+  <package id="Microsoft.SqlServer.Management.SqlParser" version="150.37051.0" targetFramework="net461" requireReinstallation="true" />
+  <package id="Microsoft.SqlServer.SqlManagementObjects" version="160.2004021.0" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
+  <package id="System.Data.Common" version="4.3.0" targetFramework="net461" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.6.0" targetFramework="net471" />
 </packages>
