--- a/DBAChecksService/DBAChecksService.csproj
+++ b/DBAChecksService/DBAChecksService.csproj
@@ -213,9 +213,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBAChecksJob.cs" />
+    <Compile Include="DestinationHandling.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DBAChecksService.cs" />
+    <Compile Include="SchemaSnapshotJob.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
