--- a/DBAChecksService/App.config
+++ b/DBAChecksService/App.config
@@ -45,6 +45,10 @@
         <assemblyIdentity name="Microsoft.Data.SqlClient" publicKeyToken="23ec7fc2d6eaa4a5" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.13.20136.2" newVersion="1.13.20136.2" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="DiffPlex" publicKeyToken="1d35e91d1bd7bc0f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.6.3.0" newVersion="1.6.3.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
