--- a/DBAChecksGUI/packages.config
+++ b/DBAChecksGUI/packages.config
@@ -3,6 +3,9 @@
   <package id="DiffPlex" version="1.6.3" targetFramework="net472" />
   <package id="DiffPlex.Wpf" version="1.1.1" targetFramework="net472" />
   <package id="ICSharpCode.TextEditor" version="3.2.1.6466" targetFramework="net472" />
+  <package id="LiveCharts" version="0.9.7" targetFramework="net472" />
+  <package id="LiveCharts.WinForms" version="0.9.7.1" targetFramework="net472" />
+  <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net472" />
   <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.1404.0" targetFramework="net472" />
   <package id="Microsoft.SqlServer.Types" version="14.0.1016.290" targetFramework="net472" />
 </packages>
