--- a/DBAChecksGUI/DBAChecksGUI.csproj
+++ b/DBAChecksGUI/DBAChecksGUI.csproj
@@ -343,6 +343,7 @@
     <None Include="Resources\StartTime_16x.png" />
     <None Include="Resources\StopTime_16x.png" />
     <None Include="Resources\AddComputedField_16x.png" />
+    <None Include="Resources\AutoSum_16x.png" />
     <Content Include="SqlServerTypes\readme.htm" />
     <Content Include="SqlServerTypes\x64\msvcr120.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
